# dexie-rewards

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
src/dexie_rewards/: __init__.py  abc.py  config.py  main.py  utils.py
src/dexie_rewards/decorators/: with_db_connection.py  with_wallet_rpc_client.py
src/dexie_rewards/rewards/: claim.py  list.py  main.py  utils.py
src/dexie_rewards/services/: database.py  dexie_api.py  dexie_db.py  wallet_rpc_client.py
src/dexie_rewards/types/: offer_reward.py  offers.py  utils.py
tests/: test_offer_reward.py  test_types.py
